// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders with defaultProps 1`] = `
<label
  className="ax-chedio-buttox__container ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-chedio-buttox ax-radio"
    disabled={undefined}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-chedio-buttox__indicator ax-radio__indicator"
  />
  <span
    className="ax-chedio-buttox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`RadioButton renders with disabled 1`] = `
<label
  className="ax-chedio-buttox__container ax-chedio-buttox__container--disabled ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-chedio-buttox ax-radio"
    disabled={true}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-chedio-buttox__indicator ax-radio__indicator"
  />
  <span
    className="ax-chedio-buttox__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`RadioButton renders with invalid 1`] = `
<label
  className="ax-chedio-buttox__container ax-chedio-buttox__container--invalid ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-chedio-buttox ax-radio"
    disabled={undefined}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-chedio-buttox__indicator ax-radio__indicator ax-radio__indicator--invalid"
  />
  <span
    className="ax-chedio-buttox__label"
  >
    Lorem ipsum
  </span>
</label>
`;
